; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_gen_template.c_tlist_new.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/asn1/extr_gen_template.c_tlist_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tlist = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tlist* (i8*)* @tlist_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tlist* @tlist_new(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tlist*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call %struct.tlist* @calloc(i32 1, i32 8)
  store %struct.tlist* %4, %struct.tlist** %3, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @strdup(i8* %5)
  %7 = load %struct.tlist*, %struct.tlist** %3, align 8
  %8 = getelementptr inbounds %struct.tlist, %struct.tlist* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  %9 = load %struct.tlist*, %struct.tlist** %3, align 8
  %10 = getelementptr inbounds %struct.tlist, %struct.tlist* %9, i32 0, i32 0
  %11 = call i32 @ASN1_TAILQ_INIT(i32* %10)
  %12 = load %struct.tlist*, %struct.tlist** %3, align 8
  ret %struct.tlist* %12
}

declare dso_local %struct.tlist* @calloc(i32, i32) #1

declare dso_local i32 @strdup(i8*) #1

declare dso_local i32 @ASN1_TAILQ_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
